welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value =< is not a member of Int
  if (13=<a=<19||13=<b=<19||13=<c=<19){
        ^hasTeen:2: error: value =< is not a member of Int
  if (13=<a=<19||13=<b=<19||13=<c=<19){
                   ^hasTeen:2: error: value =< is not a member of Int
  if (13=<a=<19||13=<b=<19||13=<c=<19){
                              ^